--- a/iroha-android-sample/src/main/res/layout/activity_main.xml
+++ b/iroha-android-sample/src/main/res/layout/activity_main.xml
@@ -1,5 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 
+<!--
+  ~ Copyright Soramitsu Co., Ltd. 2016 All Rights Reserved.
+  ~ http://soramitsu.co.jp
+  ~
+  ~ Licensed under the Apache License, Version 2.0 (the "License");
+  ~ you may not use this file except in compliance with the License.
+  ~ You may obtain a copy of the License at
+  ~
+  ~          http://www.apache.org/licenses/LICENSE-2.0
+  ~
+  ~ Unless required by applicable law or agreed to in writing, software
+  ~ distributed under the License is distributed on an "AS IS" BASIS,
+  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  ~ See the License for the specific language governing permissions and
+  ~ limitations under the License.
+  -->
+
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
@@ -37,6 +54,7 @@
                             android:layout_height="48dp"
                             android:layout_marginStart="16dp"
                             android:layout_marginTop="16dp"
+                            android:src="@drawable/ic_logo"
                             android:transitionName="profile"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent"
@@ -59,7 +77,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginEnd="16dp"
                             android:layout_marginStart="16dp"
-                            android:textColor="@color/black"
+                            android:textColor="@color/main_background_color"
                             android:textSize="16sp"
                             app:layout_constraintEnd_toStartOf="@id/logout"
                             app:layout_constraintStart_toEndOf="@id/logo"
@@ -98,7 +116,7 @@
                             android:id="@+id/balance"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:textColor="@color/black"
+                            android:textColor="@color/main_background_color"
                             android:textSize="25sp"
                             app:layout_constraintBottom_toBottomOf="@id/background"
                             app:layout_constraintEnd_toEndOf="parent"
