--- a/iroha-android-sample/src/main/res/layout/fragment_send.xml
+++ b/iroha-android-sample/src/main/res/layout/fragment_send.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
@@ -18,14 +19,14 @@
 
             <EditText
                 android:id="@+id/to"
+                android:singleLine="true"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:digits="abcdefghijklmnopqrstuvwxyz"
                 android:hint="@string/to"
-                android:inputType="text"
+                android:digits="abcdefghijklmnopqrstuvwxyz"
                 android:maxLength="9"
-                android:maxLines="1"
-                android:singleLine="true" />
+                android:inputType="text"
+                android:maxLines="1" />
 
         </android.support.design.widget.TextInputLayout>
 
@@ -48,17 +49,28 @@
                 android:inputType="number"
                 android:maxLines="1" />
 
-            <android.support.v7.widget.AppCompatButton
-                android:id="@+id/send"
-                android:layout_width="160dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
-                android:background="@color/iroha"
-                android:text="@string/send"
-                android:textColor="@android:color/white"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
-
         </android.support.design.widget.TextInputLayout>
+
+        <TextView
+            android:id="@+id/or"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="@string/or"
+            android:textColor="@color/colorAccent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/amount_layout" />
+
+        <android.support.v7.widget.AppCompatButton
+            android:id="@+id/send"
+            android:layout_width="160dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:background="@color/iroha"
+            android:text="@string/send"
+            android:textColor="@android:color/white"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"/>
     </android.support.constraint.ConstraintLayout>
 </layout>
