--- a/iroha-android-sample/src/main/res/layout/transaction_header_item.xml
+++ b/iroha-android-sample/src/main/res/layout/transaction_header_item.xml
@@ -14,15 +14,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <View
-        android:id="@+id/bottom_border"
-        android:layout_width="0dp"
-        android:layout_height="1dp"
-        android:background="@color/hint"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
     <TextView
         android:id="@+id/date"
         android:layout_width="0dp"
@@ -38,4 +29,13 @@
         app:layout_constraintTop_toBottomOf="@id/top_border"
         tools:text="Today" />
 
+    <View
+        android:id="@+id/bottom_border"
+        android:layout_width="0dp"
+        android:layout_height="1dp"
+        android:background="@color/hint"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/date" />
 </android.support.constraint.ConstraintLayout>
