--- a/iroha-android-sample/src/main/res/layout/transaction_item.xml
+++ b/iroha-android-sample/src/main/res/layout/transaction_item.xml
@@ -22,7 +22,7 @@
             android:layout_marginStart="32dp"
             android:layout_marginTop="8dp"
             android:text="@{transaction.username}"
-            android:textColor="@color/black"
+            android:textColor="@color/main_background_color"
             android:textSize="16sp"
             app:layout_constraintBottom_toTopOf="@id/date"
             app:layout_constraintEnd_toEndOf="parent"
