--- a/iroha-android-sample/src/main/res/layout/activity_bet.xml
+++ b/iroha-android-sample/src/main/res/layout/activity_bet.xml
@@ -1,21 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/main_background_color"
-    tools:context=".oracle.OracleActivity">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <ScrollView
+    <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true">
+        android:fillViewport="true">
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="500dp">
+            android:layout_height="500dp"
+            android:background="@color/main_background_color">
 
             <LinearLayout
                 android:id="@+id/startingLayout"
@@ -34,11 +29,11 @@
                         android:id="@+id/team1Tv"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="40dp"
+                        android:layout_marginStart="20dp"
                         android:gravity="center"
                         android:text="TEAM 1"
                         android:textColor="@color/main_text_color"
-                        android:textSize="30sp" />
+                        android:textSize="24sp" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -48,19 +43,20 @@
                         android:gravity="center"
                         android:text="VS"
                         android:textColor="@color/main_text_color"
-                        android:textSize="30sp" />
+                        android:textSize="24sp" />
 
                     <TextView
                         android:id="@+id/team2Tv"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentEnd="true"
-                        android:layout_marginEnd="40dp"
+                        android:layout_marginEnd="20dp"
                         android:text="TEAM 2"
                         android:textColor="@color/main_text_color"
-                        android:textSize="30sp" />
+                        android:textSize="24sp" />
 
                 </RelativeLayout>
+
 
             </LinearLayout>
 
@@ -141,10 +137,10 @@
                         android:layout_alignParentStart="true"
                         android:layout_alignParentTop="true"
                         android:layout_marginStart="30dp"
-                        app:mrl_rippleOverlay="true"
                         app:mrl_rippleColor="@color/main_background_color"
                         app:mrl_rippleDelayClick="false"
-                        app:mrl_rippleHover="true">
+                        app:mrl_rippleHover="true"
+                        app:mrl_rippleOverlay="true">
 
                         <Button
                             android:id="@+id/team1winCoefBtn"
@@ -161,10 +157,10 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerHorizontal="true"
-                        app:mrl_rippleOverlay="true"
                         app:mrl_rippleColor="@color/main_background_color"
                         app:mrl_rippleDelayClick="false"
-                        app:mrl_rippleHover="true">
+                        app:mrl_rippleHover="true"
+                        app:mrl_rippleOverlay="true">
 
                         <Button
                             android:id="@+id/drawCoefBtn"
@@ -182,10 +178,10 @@
                         android:layout_height="wrap_content"
                         android:layout_alignParentEnd="true"
                         android:layout_marginEnd="30dp"
-                        app:mrl_rippleOverlay="true"
                         app:mrl_rippleColor="@color/main_background_color"
                         app:mrl_rippleDelayClick="false"
-                        app:mrl_rippleHover="true">
+                        app:mrl_rippleHover="true"
+                        app:mrl_rippleOverlay="true">
 
                         <Button
                             android:id="@+id/team2winCoefBtn"
@@ -261,10 +257,10 @@
                 <com.balysv.materialripple.MaterialRippleLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:mrl_rippleOverlay="true"
                     app:mrl_rippleColor="@color/main_background_color"
                     app:mrl_rippleDelayClick="false"
-                    app:mrl_rippleHover="true">
+                    app:mrl_rippleHover="true"
+                    app:mrl_rippleOverlay="true">
 
                     <Button
                         android:id="@+id/next_to_oracle"
@@ -279,7 +275,5 @@
             </RelativeLayout>
 
         </RelativeLayout>
-
-    </ScrollView>
-
-</RelativeLayout>
+    </android.support.v4.widget.NestedScrollView>
+</layout>
