--- a/iroha-android-sample/src/main/res/layout/activity_oracle.xml
+++ b/iroha-android-sample/src/main/res/layout/activity_oracle.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/main_background_color"
     tools:context=".oracle.OracleActivity">
 
@@ -18,11 +18,11 @@
         <android.support.design.widget.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
             android:enabled="false"
+            android:gravity="center"
             android:text="@string/secure_message"
-            android:textSize="20sp"
-            android:textColor="@color/secure_color" />
+            android:textColor="@color/secure_color"
+            android:textSize="20sp" />
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
@@ -35,11 +35,11 @@
         <android.support.design.widget.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
             android:enabled="false"
+            android:gravity="center"
             android:text="@string/question"
-            android:textSize="30sp"
-            android:textColor="@color/secure_color" />
+            android:textColor="@color/secure_color"
+            android:textSize="30sp" />
     </android.support.design.widget.TextInputLayout>
 
     <LinearLayout
@@ -59,10 +59,10 @@
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
                 android:layout_marginStart="50dp"
-                app:mrl_rippleOverlay="true"
                 app:mrl_rippleColor="@color/main_background_color"
                 app:mrl_rippleDelayClick="false"
-                app:mrl_rippleHover="true">
+                app:mrl_rippleHover="true"
+                app:mrl_rippleOverlay="true">
 
                 <Button
                     android:id="@+id/yeapBtn"
@@ -80,10 +80,10 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_marginEnd="50dp"
-                app:mrl_rippleOverlay="true"
                 app:mrl_rippleColor="@color/main_background_color"
                 app:mrl_rippleDelayClick="false"
-                app:mrl_rippleHover="true">
+                app:mrl_rippleHover="true"
+                app:mrl_rippleOverlay="true">
 
                 <Button
                     android:id="@+id/nopeBtn"
